Try a create endpoint
