# swagger/v1/api_v1.json
@@ -9,8 +9,12 @@
     "/api/articles": {
       "get": {
         "summary": "Published articles",
-        "security": [],
-        "tags": ["articles"],
+        "security": [
+
+        ],
+        "tags": [
+          "articles"
+        ],
         "description": "This endpoint allows the client to retrieve a list of articles.\n\n\"Articles\" are all the posts that users create on DEV that typically\nshow up in the feed. They can be a blog post, a discussion question,\na help thread etc. but is referred to as article within the code.\n\nBy default it will return featured, published articles ordered\nby descending popularity.\n\nIt supports pagination, each page will contain `30` articles by default.",
         "operationId": "getArticles",
         "parameters": [
@@ -67,7 +71,11 @@
             "description": "Using this parameter will allow the client to check which articles are fresh or rising.\n            If `state=fresh` the server will return fresh articles.\n            If `state=rising` the server will return rising articles.\n            This param can be used in conjuction with `username`, only if set to `all`.",
             "schema": {
               "type": "string",
-              "enum": ["fresh", "rising", "all"]
+              "enum": [
+                "fresh",
+                "rising",
+                "all"
+              ]
             },
             "example": "fresh"
           },
@@ -103,45 +111,47 @@
                 "example": [
                   {
                     "type_of": "article",
-                    "id": 191,
-                    "title": "An Acceptable Time172",
-                    "description": "Shabby chic wayfarers normcore marfa carry. Schlitz kinfolk +1 kickstarter pitchfork cardigan 90's....",
-                    "readable_publish_date": "Nov 17",
-                    "slug": "an-acceptable-time172-25ik",
-                    "path": "/username378/an-acceptable-time172-25ik",
-                    "url": "http://localhost:3000/username378/an-acceptable-time172-25ik",
+                    "id": 10516,
+                    "title": "Oh! To be in England172",
+                    "description": "Vegan ethical distillery. Tumblr meh pop-up pug keytar sustainable irony ennui.  Bicycle rights chia...",
+                    "readable_publish_date": "Nov 21",
+                    "slug": "oh-to-be-in-england172-5bif",
+                    "path": "/username380/oh-to-be-in-england172-5bif",
+                    "url": "http://localhost:3000/username380/oh-to-be-in-england172-5bif",
                     "comments_count": 0,
                     "public_reactions_count": 0,
                     "collection_id": null,
-                    "published_timestamp": "2022-11-17T09:30:31Z",
+                    "published_timestamp": "2022-11-21T08:40:32Z",
                     "positive_reactions_count": 0,
-                    "cover_image": "http://localhost:3000/assets/23-33ea5a2b5af3dc15b9ed90de0b850f67e2390eaec3361d6687d3b9750c699f84.png",
-                    "social_image": "http://localhost:3000/assets/23-33ea5a2b5af3dc15b9ed90de0b850f67e2390eaec3361d6687d3b9750c699f84.png",
-                    "canonical_url": "http://localhost:3000/username378/an-acceptable-time172-25ik",
-                    "created_at": "2022-11-17T09:30:31Z",
+                    "cover_image": "http://localhost:3000/assets/2-1a96ae446ded018b65b215cce3aecc40a00e701642da521fdd6edd3c593ff6c1.png",
+                    "social_image": "http://localhost:3000/assets/2-1a96ae446ded018b65b215cce3aecc40a00e701642da521fdd6edd3c593ff6c1.png",
+                    "canonical_url": "http://localhost:3000/username380/oh-to-be-in-england172-5bif",
+                    "created_at": "2022-11-21T08:40:32Z",
                     "edited_at": null,
                     "crossposted_at": null,
-                    "published_at": "2022-11-17T09:30:31Z",
-                    "last_comment_at": "2022-11-17T09:30:31Z",
+                    "published_at": "2022-11-21T08:40:32Z",
+                    "last_comment_at": "2022-11-21T08:40:32Z",
                     "reading_time_minutes": 1,
-                    "tag_list": ["discuss"],
+                    "tag_list": [
+                      "discuss"
+                    ],
                     "tags": "discuss",
                     "user": {
-                      "name": "Melaine \"Quinn\" \\:/ Goodwin",
-                      "username": "username378",
-                      "twitter_username": "twitter378",
-                      "github_username": "github378",
-                      "user_id": 386,
+                      "name": "Basilia \"Joey\" \\:/ Cronin",
+                      "username": "username380",
+                      "twitter_username": "twitter380",
+                      "github_username": "github380",
+                      "user_id": 19873,
                       "website_url": null,
-                      "profile_image": "/uploads/user/profile_image/386/93f316c4-1287-45b3-b1c7-49861128e477.jpeg",
-                      "profile_image_90": "/uploads/user/profile_image/386/93f316c4-1287-45b3-b1c7-49861128e477.jpeg"
+                      "profile_image": "/uploads/user/profile_image/19873/e5d7c4dc-9e64-4c1d-9542-c7879034421c.jpeg",
+                      "profile_image_90": "/uploads/user/profile_image/19873/e5d7c4dc-9e64-4c1d-9542-c7879034421c.jpeg"
                     },
                     "organization": {
-                      "name": "Baumbach Group",
-                      "username": "org60",
-                      "slug": "org60",
-                      "profile_image": "/uploads/organization/profile_image/65/0bccbabf-3f76-473b-8c5e-bac56178315b.png",
-                      "profile_image_90": "/uploads/organization/profile_image/65/0bccbabf-3f76-473b-8c5e-bac56178315b.png"
+                      "name": "Aufderhar-Bailey",
+                      "username": "org64",
+                      "slug": "org64",
+                      "profile_image": "/uploads/organization/profile_image/1659/4e6f68ae-7716-4878-a5d4-9c318e8f1897.png",
+                      "profile_image_90": "/uploads/organization/profile_image/1659/4e6f68ae-7716-4878-a5d4-9c318e8f1897.png"
                     },
                     "flare_tag": {
                       "name": "discuss",
@@ -165,7 +175,9 @@
     "/api/articles/{id}/unpublish": {
       "put": {
         "summary": "Unpublish an article",
-        "tags": ["articles"],
+        "tags": [
+          "articles"
+        ],
         "description": "This endpoint allows the client to unpublish an article.\n\nThe user associated with the API key must have any 'admin' or 'moderator' role.\n\nThe article will be unpublished and will no longer be visible to the public. It will remain\nin the database and will set back to draft status on the author's posts dashboard. Any\nnotifications associated with the article will be deleted. Any comments on the article\nwill remain.",
         "operationId": "unpublishArticle",
         "parameters": [
@@ -224,14 +236,18 @@
     "/api/display_ads": {
       "get": {
         "summary": "display ads",
-        "tags": ["display ads"],
+        "tags": [
+          "display ads"
+        ],
         "description": "This endpoint allows the client to retrieve a list of all display ads.",
         "responses": {
           "200": {
             "description": "successful",
             "content": {
               "application/json": {
-                "example": []
+                "example": [
+
+                ]
               }
             }
           },
@@ -247,12 +263,149 @@
             }
           }
         }
+      },
+      "post": {
+        "summary": "display ads",
+        "tags": [
+          "display ads"
+        ],
+        "description": "This endpoint allows the client to create a new display ad.",
+        "parameters": [
+
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "content": {
+              "application/json": {
+                "example": {
+                  "id": 213,
+                  "approved": true,
+                  "body_markdown": "# Hi, this is ad\nYep, it's an ad",
+                  "cached_tag_list": "",
+                  "clicks_count": 0,
+                  "created_at": "2022-11-21T13:40:32.908+05:00",
+                  "display_to": "all",
+                  "impressions_count": 0,
+                  "name": "Example Ad",
+                  "organization_id": null,
+                  "placement_area": "post_comments",
+                  "processed_html": "<h1>  <a href=\"#hi-this-is-ad\" class=\"anchor\">  </a>  Hi, this is ad</h1><p>Yep, it's an ad</p>",
+                  "published": true,
+                  "success_rate": 0.0,
+                  "type_of": "in_house",
+                  "updated_at": "2022-11-21T13:40:32.908+05:00",
+                  "tag_list": [
+
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "unauthorized",
+            "content": {
+              "application/json": {
+                "example": {
+                  "error": "unauthorized",
+                  "status": 401
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "unprocessable",
+            "content": {
+              "application/json": {
+                "example": {
+                  "id": null,
+                  "approved": true,
+                  "body_markdown": "# Hi, this is ad\nYep, it's an ad",
+                  "cached_tag_list": null,
+                  "clicks_count": 0,
+                  "created_at": null,
+                  "display_to": "all",
+                  "impressions_count": 0,
+                  "name": "Example Ad",
+                  "organization_id": null,
+                  "placement_area": "moon",
+                  "processed_html": null,
+                  "published": true,
+                  "success_rate": 0.0,
+                  "type_of": "in_house",
+                  "updated_at": null,
+                  "tag_list": [
+
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "For internal use, helps distinguish ads from one another"
+                  },
+                  "body_markdown": {
+                    "type": "string",
+                    "description": "The text (in markdown) of the ad (required)"
+                  },
+                  "approved": {
+                    "type": "boolean",
+                    "description": "Ad must be both published and approved to be in rotation"
+                  },
+                  "published": {
+                    "type": "boolean",
+                    "description": "Ad must be both published and approved to be in rotation"
+                  },
+                  "organization_id": {
+                    "type": "int32",
+                    "description": "Identifies the organization to which the ad belongs"
+                  },
+                  "display_to": {
+                    "type": "string",
+                    "enum": [
+                      "all",
+                      "logged_in",
+                      "logged_out"
+                    ],
+                    "default": "all",
+                    "description": "Potentially limits visitors to whom the ad is visible"
+                  },
+                  "placement_area": {
+                    "type": "string",
+                    "enum": [
+                      "sidebar_left",
+                      "sidebar_left_2",
+                      "sidebar_right",
+                      "post_comments"
+                    ],
+                    "description": "Identifies which area of site layout the ad can appear in"
+                  }
+                },
+                "required": [
+                  "name",
+                  "body_markdown",
+                  "placement_area"
+                ]
+              }
+            }
+          }
+        }
       }
     },
     "/api/display_ads/{id}": {
       "get": {
         "summary": "display ad",
-        "tags": ["display ads"],
+        "tags": [
+          "display ads"
+        ],
         "description": "This endpoint allows the client to retrieve a single display ad, via its id.",
         "parameters": [
           {
@@ -274,23 +427,25 @@
             "content": {
               "application/json": {
                 "example": {
-                  "id": 10,
+                  "id": 214,
                   "approved": false,
-                  "body_markdown": "Hello _hey_ Hey hey 5",
+                  "body_markdown": "Hello _hey_ Hey hey 7",
                   "cached_tag_list": "",
                   "clicks_count": 0,
-                  "created_at": "2022-11-17T10:30:32.066+01:00",
+                  "created_at": "2022-11-21T13:40:33.059+05:00",
                   "display_to": "all",
                   "impressions_count": 0,
-                  "name": "Display Ad 10",
-                  "organization_id": 66,
+                  "name": "Display Ad 214",
+                  "organization_id": 1660,
                   "placement_area": "sidebar_left",
-                  "processed_html": "<p>Hello <em>hey</em> Hey hey 5</p>",
+                  "processed_html": "<p>Hello <em>hey</em> Hey hey 7</p>",
                   "published": false,
                   "success_rate": 0.0,
                   "type_of": "in_house",
-                  "updated_at": "2022-11-17T10:30:32.069+01:00",
-                  "tag_list": []
+                  "updated_at": "2022-11-21T13:40:33.062+05:00",
+                  "tag_list": [
+
+                  ]
                 }
               }
             }
@@ -323,7 +478,9 @@
     "/api/reactions/toggle": {
       "post": {
         "summary": "toggle reaction",
-        "tags": ["reactions"],
+        "tags": [
+          "reactions"
+        ],
         "description": "This endpoint allows the client to toggle the user's reaction to a specified reactable (eg, Article, Comment, or User). For examples:\n        * \"Like\"ing an Article will create a new \"like\" Reaction from the user for that Articles\n        * \"Like\"ing that Article a second time will remove the \"like\" from the user",
         "parameters": [
           {
@@ -332,7 +489,11 @@
             "required": true,
             "schema": {
               "type": "string",
-              "enum": ["like", "readinglist", "unicorn"]
+              "enum": [
+                "like",
+                "readinglist",
+                "unicorn"
+              ]
             }
           },
           {
@@ -350,7 +511,11 @@
             "required": true,
             "schema": {
               "type": "string",
-              "enum": ["Comment", "Article", "User"]
+              "enum": [
+                "Comment",
+                "Article",
+                "User"
+              ]
             }
           }
         ],
@@ -362,8 +527,8 @@
                 "example": {
                   "result": "create",
                   "category": "like",
-                  "id": 1,
-                  "reactable_id": 195,
+                  "id": 995,
+                  "reactable_id": 10520,
                   "reactable_type": "Article"
                 }
               }
@@ -386,7 +551,9 @@
     "/api/reactions": {
       "post": {
         "summary": "create reaction",
-        "tags": ["reactions"],
+        "tags": [
+          "reactions"
+        ],
         "description": "This endpoint allows the client to create a reaction to a specified reactable (eg, Article, Comment, or User). For examples:\n        * \"Like\"ing an Article will create a new \"like\" Reaction from the user for that Articles\n        * \"Like\"ing that Article a second time will return the previous \"like\"",
         "parameters": [
           {
@@ -395,7 +562,11 @@
             "required": true,
             "schema": {
               "type": "string",
-              "enum": ["like", "readinglist", "unicorn"]
+              "enum": [
+                "like",
+                "readinglist",
+                "unicorn"
+              ]
             }
           },
           {
@@ -413,7 +584,11 @@
             "required": true,
             "schema": {
               "type": "string",
-              "enum": ["Comment", "Article", "User"]
+              "enum": [
+                "Comment",
+                "Article",
+                "User"
+              ]
             }
           }
         ],
@@ -425,8 +600,8 @@
                 "example": {
                   "result": "none",
                   "category": "like",
-                  "id": 3,
-                  "reactable_id": 197,
+                  "id": 997,
+                  "reactable_id": 10522,
                   "reactable_type": "Article"
                 }
               }
@@ -449,7 +624,9 @@
     "/api/users/{id}/unpublish": {
       "put": {
         "summary": "Unpublish a User's Articles and Comments",
-        "tags": ["users"],
+        "tags": [
+          "users"
+        ],
         "description": "This endpoint allows the client to unpublish all of the articles and\ncomments created by a user.\n\nThe user associated with the API key must have any 'admin' or 'moderator' role.\n\nThis specified user's articles and comments will be unpublished and will no longer be\nvisible to the public. They will remain in the database and will set back to draft status\non the specified user's  dashboard. Any notifications associated with the specified user's\narticles and comments will be deleted.\n\nNote this endpoint unpublishes articles and comments asychronously: it will return a 204 NO CONTENT\nstatus code immediately, but the articles and comments will not be unpublished until the\nrequest is completed on the server.",
         "operationId": "unpublishUser",
         "parameters": [
@@ -498,7 +675,9 @@
     "/api/users/{id}/suspend": {
       "put": {
         "summary": "Suspend a User",
-        "tags": ["users"],
+        "tags": [
+          "users"
+        ],
         "description": "This endpoint allows the client to suspend a user.\n\nThe user associated with the API key must have any 'admin' or 'moderator' role.\n\nThis specified user will be assigned the 'suspended' role. Suspending a user will stop the\nuser from posting new posts and comments. It doesn't delete any of the user's content, just\nprevents them from creating new content while suspended. Users are not notified of their suspension\nin the UI, so if you want them to know about this, you must notify them.",
         "operationId": "suspendUser",
         "parameters": [
@@ -553,7 +732,9 @@
   ],
   "security": [
     {
-      "api-key": []
+      "api-key": [
+
+      ]
     }
   ],
   "components": {
